{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 49,
  "lineage": "71943aea-ee81-c678-5169-3056a276360f",
  "resources": [
    {
      "module": "module.apigee-x-bridge-mig[\"euw1-instance\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_glb_to_mig_bridge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-08T07:18:26.306-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/is-apgx-tf-02/global/firewalls/hc-apigee-europe-west1",
            "log_config": [],
            "name": "hc-apigee-europe-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/networks/apigee-network",
            "priority": 1000,
            "project": "is-apgx-tf-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/firewalls/hc-apigee-europe-west1",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "apigee-bridge"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.service-project.data.google_bigquery_default_service_account.bq_sa",
            "module.service-project.data.google_project.project",
            "module.service-project.data.google_storage_project_service_account.gcs_sa",
            "module.service-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service-project.google_compute_shared_vpc_service_project.service_projects",
            "module.service-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service-project.google_project.project",
            "module.service-project.google_project_iam_member.servicenetworking",
            "module.service-project.google_project_iam_member.shared_vpc_host_robots",
            "module.service-project.google_project_organization_policy.boolean",
            "module.service-project.google_project_organization_policy.list",
            "module.service-project.google_project_service.project_services",
            "module.service-project.google_project_service_identity.jit_si",
            "module.service-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_global_address.psa_ranges",
            "module.shared-vpc.google_compute_network.network",
            "module.shared-vpc.google_compute_network_peering.local",
            "module.shared-vpc.google_compute_network_peering.remote",
            "module.shared-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.shared-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.shared-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.mig-l7xlb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "mig_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/regions/europe-west1/instanceGroups/apigee-europe-west1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-10-08T07:50:22.383-07:00",
            "enable_cdn": false,
            "fingerprint": "AfoJFfTDkMs=",
            "generated_id": 2755910663829963969,
            "health_checks": [
              "projects/is-network-tf-02/global/healthChecks/apigee-xlb-hc"
            ],
            "id": "projects/is-network-tf-02/global/backendServices/apigee-xlb-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "apigee-xlb-backend",
            "port_name": "https",
            "project": "is-network-tf-02",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/backendServices/apigee-xlb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.apigee-x-bridge-mig.google_compute_firewall.allow_glb_to_mig_bridge",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http2",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.https",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.ssl",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.tcp",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_per_instance_config.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_group.unmanaged",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_iam_binding.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_template.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_region_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_service_account.service_account",
            "module.apigee-x-bridge-mig.module.bridge-template.google_tags_tag_binding.binding",
            "module.apigee-x-core.google_project_service_identity.apigee_sa",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance.apigee_instance",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance_attachment.apigee_instance_attchment",
            "module.apigee-x-core.module.apigee.google_apigee_organization.apigee_org",
            "module.apigee-x-core.module.kms-inst-disk.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_tags_tag_binding.binding",
            "module.apigee-x-core.module.kms-org-db.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring_iam_binding.default",
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.mig-l7xlb.google_compute_health_check.mig_lb_hc",
            "module.service-project.data.google_bigquery_default_service_account.bq_sa",
            "module.service-project.data.google_project.project",
            "module.service-project.data.google_storage_project_service_account.gcs_sa",
            "module.service-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service-project.google_compute_shared_vpc_service_project.service_projects",
            "module.service-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service-project.google_project.project",
            "module.service-project.google_project_iam_member.servicenetworking",
            "module.service-project.google_project_iam_member.shared_vpc_host_robots",
            "module.service-project.google_project_organization_policy.boolean",
            "module.service-project.google_project_organization_policy.list",
            "module.service-project.google_project_service.project_services",
            "module.service-project.google_project_service_identity.jit_si",
            "module.service-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_global_address.psa_ranges",
            "module.shared-vpc.google_compute_network.network",
            "module.shared-vpc.google_compute_network_peering.local",
            "module.shared-vpc.google_compute_network_peering.remote",
            "module.shared-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.shared-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.shared-vpc.google_compute_subnetwork.subnetwork",
            "module.shared-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.mig-l7xlb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/is-network-tf-02/global/forwardingRules/apigee-xlb-forwarding-rule",
            "ip_address": "34.149.49.127",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "apigee-xlb-forwarding-rule",
            "port_range": "443-443",
            "project": "is-network-tf-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/forwardingRules/apigee-xlb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/targetHttpsProxies/apigee-xlb-target-proxy"
          },
          "dependencies": [
            "module.apigee-x-bridge-mig.google_compute_firewall.allow_glb_to_mig_bridge",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http2",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.https",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.ssl",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.tcp",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_per_instance_config.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_group.unmanaged",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_iam_binding.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_template.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_region_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_service_account.service_account",
            "module.apigee-x-bridge-mig.module.bridge-template.google_tags_tag_binding.binding",
            "module.apigee-x-core.google_project_service_identity.apigee_sa",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance.apigee_instance",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance_attachment.apigee_instance_attchment",
            "module.apigee-x-core.module.apigee.google_apigee_organization.apigee_org",
            "module.apigee-x-core.module.kms-inst-disk.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_tags_tag_binding.binding",
            "module.apigee-x-core.module.kms-org-db.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring_iam_binding.default",
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.mig-l7xlb.google_compute_backend_service.mig_backend",
            "module.mig-l7xlb.google_compute_health_check.mig_lb_hc",
            "module.mig-l7xlb.google_compute_target_https_proxy.https_proxy",
            "module.mig-l7xlb.google_compute_url_map.url_map",
            "module.nip-development-hostname.google_compute_global_address.external_address",
            "module.nip-development-hostname.google_compute_managed_ssl_certificate.google_cert",
            "module.service-project.data.google_bigquery_default_service_account.bq_sa",
            "module.service-project.data.google_project.project",
            "module.service-project.data.google_storage_project_service_account.gcs_sa",
            "module.service-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service-project.google_compute_shared_vpc_service_project.service_projects",
            "module.service-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service-project.google_project.project",
            "module.service-project.google_project_iam_member.servicenetworking",
            "module.service-project.google_project_iam_member.shared_vpc_host_robots",
            "module.service-project.google_project_organization_policy.boolean",
            "module.service-project.google_project_organization_policy.list",
            "module.service-project.google_project_service.project_services",
            "module.service-project.google_project_service_identity.jit_si",
            "module.service-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_global_address.psa_ranges",
            "module.shared-vpc.google_compute_network.network",
            "module.shared-vpc.google_compute_network_peering.local",
            "module.shared-vpc.google_compute_network_peering.remote",
            "module.shared-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.shared-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.shared-vpc.google_compute_subnetwork.subnetwork",
            "module.shared-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.mig-l7xlb",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-08T07:51:28.326-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/is-network-tf-02/global/targetHttpsProxies/apigee-xlb-target-proxy",
            "name": "apigee-xlb-target-proxy",
            "project": "is-network-tf-02",
            "proxy_bind": false,
            "proxy_id": 3562649356178539679,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/targetHttpsProxies/apigee-xlb-target-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/sslCertificates/cert-3414949127"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/urlMaps/apigee-xlb"
          },
          "dependencies": [
            "module.apigee-x-bridge-mig.google_compute_firewall.allow_glb_to_mig_bridge",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http2",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.https",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.ssl",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.tcp",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_per_instance_config.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_group.unmanaged",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_iam_binding.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_template.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_region_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_service_account.service_account",
            "module.apigee-x-bridge-mig.module.bridge-template.google_tags_tag_binding.binding",
            "module.apigee-x-core.google_project_service_identity.apigee_sa",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance.apigee_instance",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance_attachment.apigee_instance_attchment",
            "module.apigee-x-core.module.apigee.google_apigee_organization.apigee_org",
            "module.apigee-x-core.module.kms-inst-disk.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_tags_tag_binding.binding",
            "module.apigee-x-core.module.kms-org-db.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring_iam_binding.default",
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.mig-l7xlb.google_compute_backend_service.mig_backend",
            "module.mig-l7xlb.google_compute_health_check.mig_lb_hc",
            "module.mig-l7xlb.google_compute_url_map.url_map",
            "module.nip-development-hostname.google_compute_global_address.external_address",
            "module.nip-development-hostname.google_compute_managed_ssl_certificate.google_cert",
            "module.service-project.data.google_bigquery_default_service_account.bq_sa",
            "module.service-project.data.google_project.project",
            "module.service-project.data.google_storage_project_service_account.gcs_sa",
            "module.service-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service-project.google_compute_shared_vpc_service_project.service_projects",
            "module.service-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service-project.google_project.project",
            "module.service-project.google_project_iam_member.servicenetworking",
            "module.service-project.google_project_iam_member.shared_vpc_host_robots",
            "module.service-project.google_project_organization_policy.boolean",
            "module.service-project.google_project_organization_policy.list",
            "module.service-project.google_project_service.project_services",
            "module.service-project.google_project_service_identity.jit_si",
            "module.service-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_global_address.psa_ranges",
            "module.shared-vpc.google_compute_network.network",
            "module.shared-vpc.google_compute_network_peering.local",
            "module.shared-vpc.google_compute_network_peering.remote",
            "module.shared-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.shared-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.shared-vpc.google_compute_subnetwork.subnetwork",
            "module.shared-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.mig-l7xlb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-08T07:51:16.111-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/backendServices/apigee-xlb-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "YYB3ykOc1Y4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/is-network-tf-02/global/urlMaps/apigee-xlb",
            "map_id": 5208137905226892427,
            "name": "apigee-xlb",
            "path_matcher": [],
            "project": "is-network-tf-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/urlMaps/apigee-xlb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.apigee-x-bridge-mig.google_compute_firewall.allow_glb_to_mig_bridge",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.http2",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.https",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.ssl",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_health_check.tcp",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_per_instance_config.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_autoscaler.default",
            "module.apigee-x-bridge-mig.module.bridge-mig.google_compute_region_instance_group_manager.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_group.unmanaged",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_iam_binding.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_instance_template.default",
            "module.apigee-x-bridge-mig.module.bridge-template.google_compute_region_disk.disks",
            "module.apigee-x-bridge-mig.module.bridge-template.google_service_account.service_account",
            "module.apigee-x-bridge-mig.module.bridge-template.google_tags_tag_binding.binding",
            "module.apigee-x-core.google_project_service_identity.apigee_sa",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance.apigee_instance",
            "module.apigee-x-core.module.apigee-x-instance.google_apigee_instance_attachment.apigee_instance_attchment",
            "module.apigee-x-core.module.apigee.google_apigee_organization.apigee_org",
            "module.apigee-x-core.module.kms-inst-disk.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_crypto_key_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_binding.default",
            "module.apigee-x-core.module.kms-inst-disk.google_kms_key_ring_iam_member.default",
            "module.apigee-x-core.module.kms-inst-disk.google_tags_tag_binding.binding",
            "module.apigee-x-core.module.kms-org-db.data.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_crypto_key_iam_binding.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring.default",
            "module.apigee-x-core.module.kms-org-db.google_kms_key_ring_iam_binding.default",
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.mig-l7xlb.google_compute_backend_service.mig_backend",
            "module.mig-l7xlb.google_compute_health_check.mig_lb_hc",
            "module.service-project.data.google_bigquery_default_service_account.bq_sa",
            "module.service-project.data.google_project.project",
            "module.service-project.data.google_storage_project_service_account.gcs_sa",
            "module.service-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service-project.google_compute_shared_vpc_service_project.service_projects",
            "module.service-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service-project.google_project.project",
            "module.service-project.google_project_iam_member.servicenetworking",
            "module.service-project.google_project_iam_member.shared_vpc_host_robots",
            "module.service-project.google_project_organization_policy.boolean",
            "module.service-project.google_project_organization_policy.list",
            "module.service-project.google_project_service.project_services",
            "module.service-project.google_project_service_identity.jit_si",
            "module.service-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_global_address.psa_ranges",
            "module.shared-vpc.google_compute_network.network",
            "module.shared-vpc.google_compute_network_peering.local",
            "module.shared-vpc.google_compute_network_peering.remote",
            "module.shared-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.shared-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.shared-vpc.google_compute_subnetwork.subnetwork",
            "module.shared-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.nip-development-hostname",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "external_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.49.127",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-10-08T07:16:57.360-07:00",
            "id": "projects/is-network-tf-02/global/addresses/apigee-external",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "apigee-external",
            "prefix_length": 0,
            "project": "is-network-tf-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-network-tf-02/global/addresses/apigee-external"
          },
          "dependencies": [
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.service-project.data.google_bigquery_default_service_account.bq_sa",
            "module.service-project.data.google_project.project",
            "module.service-project.data.google_storage_project_service_account.gcs_sa",
            "module.service-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service-project.google_compute_shared_vpc_service_project.service_projects",
            "module.service-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service-project.google_project.project",
            "module.service-project.google_project_iam_member.servicenetworking",
            "module.service-project.google_project_iam_member.shared_vpc_host_robots",
            "module.service-project.google_project_organization_policy.boolean",
            "module.service-project.google_project_organization_policy.list",
            "module.service-project.google_project_service.project_services",
            "module.service-project.google_project_service_identity.jit_si",
            "module.service-project.google_project_service_identity.servicenetworking"
          ]
        }
      ]
    },
    {
      "module": "module.shared-vpc",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "psa_ranges",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "apigee-range",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-10-08T07:17:20.108-07:00",
            "id": "projects/is-apgx-tf-02/global/addresses/apigee-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "apigee-range",
            "network": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/networks/apigee-network",
            "prefix_length": 22,
            "project": "is-apgx-tf-02",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/addresses/apigee-range"
          },
          "dependencies": [
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "apigee-support-range",
          "schema_version": 0,
          "attributes": {
            "address": "10.1.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-10-08T07:17:19.804-07:00",
            "id": "projects/is-apgx-tf-02/global/addresses/apigee-support-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "apigee-support-range",
            "network": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/networks/apigee-network",
            "prefix_length": 28,
            "project": "is-apgx-tf-02",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/addresses/apigee-support-range"
          },
          "dependencies": [
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/is-apgx-tf-02/global/networks/apigee-network",
            "mtu": 0,
            "name": "apigee-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "312991913643592886",
            "project": "is-apgx-tf-02",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/networks/apigee-network"
          },
          "dependencies": [
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1/apigee-exposure",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-08T07:17:22.678-07:00",
            "description": "Terraform-managed.",
            "gateway_address": "10.100.0.1",
            "id": "projects/is-apgx-tf-02/regions/europe-west1/subnetworks/apigee-exposure",
            "ip_cidr_range": "10.100.0.0/24",
            "name": "apigee-exposure",
            "network": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/global/networks/apigee-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "is-apgx-tf-02",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/is-apgx-tf-02/regions/europe-west1/subnetworks/apigee-exposure",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.host-project.data.google_bigquery_default_service_account.bq_sa",
            "module.host-project.data.google_project.project",
            "module.host-project.data.google_storage_project_service_account.gcs_sa",
            "module.host-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host-project.google_compute_shared_vpc_service_project.service_projects",
            "module.host-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host-project.google_project.project",
            "module.host-project.google_project_iam_member.servicenetworking",
            "module.host-project.google_project_iam_member.shared_vpc_host_robots",
            "module.host-project.google_project_organization_policy.boolean",
            "module.host-project.google_project_organization_policy.list",
            "module.host-project.google_project_service.project_services",
            "module.host-project.google_project_service_identity.jit_si",
            "module.host-project.google_project_service_identity.servicenetworking",
            "module.shared-vpc.data.google_compute_network.network",
            "module.shared-vpc.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}